Added a course entity and CRUD operation on it

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
+    <div th:include="fragments/components::header"></div>
 </head>
 <body>
-<h1>Home page</h1>
+<p><a href="/courses" class="btn btn-primary btn-lg">Courses</a></p>
 </body>
 </html>
